[tool.poetry]
name = "jocker"
version = "0.1.0"
description = ""
authors = ["leco <l3co@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
docopt = "^0.6.2"
terminaltables = "^3.1.10"
nsenter = "^0.2"
pychroot = "0.9.18"
cgroups = "^0.1.0"
pyroute2 = "^0.7.12"
colorama = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
